--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,3 +1,4 @@
+<!-- src/app/hero/hero.component.html -->
 <div class="hero-main">
   <div class="hero">
     <div class="hero-content">
@@ -5,8 +6,7 @@
       <div class="hero-text">
         <h1>Stavros Nastos</h1>
         <h3>Frontend Developer</h3>
-        <!-- Button unter den Texten einfügen -->
-        <button class="hero-button">Contact Me</button>
+        <button class="hero-button" (click)="scrollToSection('contact')">Contact Me</button>
       </div>
     </div>
   </div>
