--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -26,7 +26,7 @@
             <p class="contact-text">
                 Feel free to contact me. I look forward to expanding on my previous knowledge.
             </p>
-            <button class="get-in-touch">Get in touch</button>
+            <button class="get-in-touch" (click)="scrollToSection('contact')">Get in touch</button>
         </div>
     </div>
 </div>
