--- a/src/app/main-content/footer/footer.component.html
+++ b/src/app/main-content/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="footer">
     <div class="footer-left">
       <p class="name">Stavros Nastos</p>
-      <a href="impressum.html" class="impressum-link">Impressum</a>
+      <a [routerLink]="['impressum']" routerLinkActive="router-link-active" class="impressum-link">Impressum</a>
     </div>
     <div class="footer-center">
       <p>© Stavros Nastos 2024</p>
