--- a/src/app/main-content/skills/skills.component.scss
+++ b/src/app/main-content/skills/skills.component.scss
@@ -13,7 +13,7 @@
   /* Gemeinsame Hintergrundfarbe für beide Sektionen */
   color: white;
   /* Textfarbe */
-  background-image: url('../../assets/backgrounds/green1.png');
+  background-image: url('../../../assets/backgrounds/green1.png');
   background-position: right -140px top 30px;
   background-repeat: no-repeat;
   background-size: 400px;
