--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -72,7 +72,7 @@ html, body {
   margin-top: 60px;
   margin-bottom: 100px;
   margin-left: 100px;
-  background-image: url('../../assets/backgrounds/purple1.png');
+  background-image: url('../../../assets/backgrounds/purple1.png');
   background-position: right top;
   background-repeat: no-repeat;
   background-size: contain;
