--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -11,7 +11,7 @@
     /* Textfarbe */
     
     /* Abstand oben und unten, 10% Abstand links und rechts */
-    background-image: url('../../assets/backgrounds/purple2.png');
+    background-image: url('../../../assets/backgrounds/purple2.png');
     background-position: left -120px bottom -400px;
     background-repeat: no-repeat;
     background-size: contain;
