--- a/src/app/main-content/portfolio/portfolio.component.scss
+++ b/src/app/main-content/portfolio/portfolio.component.scss
@@ -72,7 +72,7 @@ body {
     /* Hintergrundfarbe */
     color: white;
     /* Textfarbe */
-    background-image: url('../../assets/backgrounds/purple1.png');
+    background-image: url('../../../assets/backgrounds/purple1.png');
     background-position: left -200px top 100px;
     background-repeat: no-repeat;
     background-size: 400px;
