live-test-links

--- a/src/app/main-content/portfolio/portfolio.component.scss
+++ b/src/app/main-content/portfolio/portfolio.component.scss
@@ -140,6 +140,7 @@ body {
     /* Zentriert den Inhalt vertikal */
     justify-content: center;
     /* Zentriert den Inhalt horizontal */
+    text-decoration: none;
 
     margin-right: 50px;
 }
