--- a/src/app/main-content/portfolio/portfolio.component.html
+++ b/src/app/main-content/portfolio/portfolio.component.html
@@ -9,18 +9,17 @@
             <p>Explore a selection of my work here - Interact with projects to see my skills in action.</p>
         </div>
 
-
         <div class="portfolio-container">
             <div class="portfolio-item">
                 <img src="../../assets/img/self/join.png" alt="Project Image" class="portfolio-image">
                 <div class="portfolio-text">
                     <h2>Join</h2>
                     <p class="project-tools">Angular | TypeScript | HTML | CSS | Firebase</p>
-                    <p>Task manager inspired by the Kanban System. Create and organize tasks using drag and drop
-                        functions,
-                        assign users and categories.</p>
-                    <button class="portfolio-button live-test">Live test</button>
-                    <button class="portfolio-button github margin-zero">GitHub</button>
+                    <p>Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.</p>
+                    
+                    <!-- Verwende <a> statt <button> -->
+                    <a href="https://join-kanban.de/" class="portfolio-button live-test" target="_blank">Live test</a>
+                    <a href="https://github.com/RaphaelFichtinger/JOIN" class="portfolio-button github margin-zero" target="_blank">GitHub</a>
                 </div>
             </div>
 
@@ -29,12 +28,10 @@
                 <div class="portfolio-text-2">
                     <h2>El pollo loco</h2>
                     <p class="project-tools">JavaScript | HTML | CSS</p>
-                    <p>A simple Jump-and-Run game based on an object-oriented approach. Help Carlos to find coins and
-                        Tequila
-                        bottles to fight against the killer chickens.</p>
+                    <p>A simple Jump-and-Run game based on an object-oriented approach. Help Carlos to find coins and Tequila bottles to fight against the killer chickens.</p>
                     <div class="text-2-buttons">
-                        <button class="portfolio-button github">GitHub</button>
-                        <button class="portfolio-button live-test margin-zero">Live test</button>
+                        <a href="https://github.com/your-pollo-repo" class="portfolio-button github" target="_blank">GitHub</a>
+                        <a href="https://github.com/NastosStavros/El-Pollo-loco.git" class="portfolio-button live-test margin-zero" target="_blank">Live test</a>
                     </div>
                 </div>
                 <img src="../../assets/img/self/pollo_loco.png" alt="Project Image" class="portfolio-image">
