--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -2,9 +2,9 @@
   <div class="about-me">
     <div class="contact-info">
       <div class="icons">
-        <a href="https://facebook.com" target="_blank"><img src="assets/icons/github.png" alt="Facebook"></a>
-        <a href="https://github.com" target="_blank"><img src="assets/icons/email.png" alt="GitHub"></a>
-        <a href="https://twitter.com" target="_blank"><img src="assets/icons/linkedin.png" alt="Twitter"></a>
+        <a href="https://github.com/NastosStavros" target="_blank"><img src="assets/icons/github.png" alt="Github"></a>
+        <a target="_blank" (click)="scrollToSection('contact')"><img src="assets/icons/email.png" alt="GitHub"></a>
+        <a href="https://www.linkedin.com/in/stavros-nastos-479720324/" target="_blank"><img src="assets/icons/linkedin.png" alt="LinkedIn"></a>
       </div>
     </div>
 
@@ -12,7 +12,7 @@
       <div class="text-section">
         <h1>About Me</h1>
         <p class="about-text">
-          Hello, I'm a Frontend Developer based in Datteln, near Dortmund. Driven by my passion for technology and design, I am dedicated to creating dynamic and visually engaging websites and applications. With a keen eye for detail and a commitment to user experience, I am excited about the opportunity to contribute to innovative projects and advance my skills in the ever-evolving field of web development.
+          I'm a Frontend Developer based in Datteln, near Dortmund. My passion for technology and design drives me to create dynamic and engaging websites. I’ve honed my skills through a retraining program, all while balancing a full-time job as a special education teacher. My background has instilled in me qualities like adaptability, problem-solving, and dedication—traits that serve me well in both teaching and software development. I’m excited to contribute to innovative projects and continue growing in the evolving world of web development.
         </p>
         <div class="info-section">
           <div class="info-item">
