--- a/src/app/main-content/footer/footer.component.html
+++ b/src/app/main-content/footer/footer.component.html
@@ -7,13 +7,13 @@
       <p>© Stavros Nastos 2024</p>
     </div>
     <div class="footer-right">
-      <a href="https://github.com/yourprofile" target="_blank">
+      <a href="https://github.com/NastosStavros" target="_blank">
         <img src="../../assets/icons/github.png" alt="GitHub" class="footer-icon">
       </a>
       <a href="mailto:yourmail@example.com">
         <img src="../../assets/icons/email.png" alt="Mail" class="footer-icon">
       </a>
-      <a href="https://www.linkedin.com/in/yourprofile" target="_blank">
+      <a href="https://www.linkedin.com/in/stavros-nastos-479720324/" target="_blank">
         <img src="../../assets/icons/linkedin.png" alt="LinkedIn" class="footer-icon">
       </a>
     </div>
