--- a/src/app/main-content/portfolio/portfolio.component.html
+++ b/src/app/main-content/portfolio/portfolio.component.html
@@ -30,8 +30,8 @@
                     <p class="project-tools">JavaScript | HTML | CSS</p>
                     <p>A simple Jump-and-Run game based on an object-oriented approach. Help Carlos to find coins and Tequila bottles to fight against the killer chickens.</p>
                     <div class="text-2-buttons">
-                        <a href="https://github.com/your-pollo-repo" class="portfolio-button github" target="_blank">GitHub</a>
-                        <a href="https://github.com/NastosStavros/El-Pollo-loco.git" class="portfolio-button live-test margin-zero" target="_blank">Live test</a>
+                        <a href="https://github.com/NastosStavros/El-Pollo-loco.git" class="portfolio-button github" target="_blank">GitHub</a>
+                        <a href="https://el-pollo-loco.de/" class="portfolio-button live-test margin-zero" target="_blank">Live test</a>
                     </div>
                 </div>
                 <img src="../../assets/img/self/pollo_loco.png" alt="Project Image" class="portfolio-image">
