--- a/src/app/main-content/header/header.component.scss
+++ b/src/app/main-content/header/header.component.scss
@@ -15,7 +15,7 @@ h1 {
     width: 100vw; /* Volle Breite */
     background-color: #141D2F; /* Hintergrundfarbe */
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     height: 109.03px; /* Höhe des Headers */
     z-index: 1000; /* Stellt sicher, dass der Header über anderen Inhalten liegt */
