--- a/src/app/main-content/hero/hero.component.html
+++ b/src/app/main-content/hero/hero.component.html
@@ -9,5 +9,13 @@
         <button class="hero-button" (click)="scrollToSection('contact')">Contact Me</button>
       </div>
     </div>
+      <div class="icons">
+        <img class="vector" src="../../../assets/vectors/vector_1.png" alt="">
+        <a href="https://github.com/NastosStavros" target="_blank"><img src="assets/icons/github.png" alt="Github"></a>
+        <a target="_blank" (click)="scrollToSection('contact')"><img src="assets/icons/email.png" alt="GitHub"></a>
+        <a href="https://www.linkedin.com/in/stavros-nastos-479720324/" target="_blank"><img src="assets/icons/linkedin.png" alt="LinkedIn"></a>
+      </div>
+    </div>
   </div>
-</div>
+  
+
