--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -16,6 +16,9 @@
                 <mat-form-field class="example-full-width">
                     <mat-label>Name</mat-label>
                     <input type="text" matInput formControlName="name" placeholder="Ex. John Doe">
+                    <mat-error *ngIf="contactForm.get('name')?.hasError('minlength')">
+                        Name must be at least 3 characters long.
+                    </mat-error>
                     <mat-error *ngIf="contactForm.get('name')?.hasError('required')">
                         Name is <strong>required</strong>
                     </mat-error>
@@ -37,9 +40,15 @@
                 </mat-form-field>
                 <mat-form-field class="example-full-width">
                     <mat-label>Send me a message</mat-label>
-                    <textarea matInput formControlName="message"
-                        placeholder="Ex. Hello, I am interested in ..."></textarea>
-                </mat-form-field>
+                    <textarea matInput formControlName="message" placeholder="Ex. Hello, I am interested in ..."></textarea>
+                    <mat-error *ngIf="contactForm.get('message')?.hasError('minlength')">
+                      Message must be at least 8 characters long.
+                    </mat-error>
+                    <mat-error *ngIf="contactForm.get('message')?.hasError('required')">
+                      Message is <strong>required</strong>.
+                    </mat-error>
+                  </mat-form-field>
+                  
                 <div class="custom-checkbox">
                     <input type="checkbox" id="customCheckbox" formControlName="terms">
                     <label for="customCheckbox">
