--- a/src/app/main-content/portfolio/portfolio.component.html
+++ b/src/app/main-content/portfolio/portfolio.component.html
@@ -16,10 +16,11 @@
                     <h2>Join</h2>
                     <p class="project-tools">Angular | TypeScript | HTML | CSS | Firebase</p>
                     <p>Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.</p>
-                    
+                    <div class="text-buttons">
                     <!-- Verwende <a> statt <button> -->
                     <a href="https://join-kanban.de/" class="portfolio-button live-test" target="_blank">Live test</a>
                     <a href="https://github.com/RaphaelFichtinger/JOIN" class="portfolio-button github margin-zero" target="_blank">GitHub</a>
+                    </div>
                 </div>
             </div>
 
@@ -29,7 +30,7 @@
                     <h2>El pollo loco</h2>
                     <p class="project-tools">JavaScript | HTML | CSS</p>
                     <p>A simple Jump-and-Run game based on an object-oriented approach. Help Carlos to find coins and Tequila bottles to fight against the killer chickens.</p>
-                    <div class="text-2-buttons">
+                    <div class="text-buttons">
                         <a href="https://github.com/NastosStavros/El-Pollo-loco.git" class="portfolio-button github" target="_blank">GitHub</a>
                         <a href="https://el-pollo-loco.de/" class="portfolio-button live-test margin-zero" target="_blank">Live test</a>
                     </div>
