--- a/src/app/main-content/portfolio/portfolio.component.scss
+++ b/src/app/main-content/portfolio/portfolio.component.scss
@@ -42,6 +42,9 @@ body {
         font-size: 60px;
         margin-bottom: 0;
         background-color: #1e2a38;
+        font-family: "Poppins", sans-serif;
+        font-size: 60px;
+        font-weight: 700;
     }
 }
 
@@ -59,6 +62,8 @@ body {
     background-color: #1e2a38;
     padding-bottom: 50px;
     padding-top: 10px;
+    padding-left: 40px;
+    padding-right: 40px;
 
     p {
         margin-top: 16px;
@@ -118,9 +123,9 @@ body {
 
 
 .portfolio-button {
-    width: 152px;
+    width: 50%;
     /* Feste Breite */
-    height: 58px;
+    height: 36px;
     /* Feste Höhe */
     padding: 15px 30px;
     /* Abstand innen (oben/unten: 15px, links/rechts: 30px) */
@@ -130,10 +135,10 @@ body {
     /* Abgerundete Ecken nur oben links */
     color: white;
     /* Textfarbe */
-
     font-size: 16px;
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
+    font-weight: 600;
     display: inline-flex;
     /* Ermöglicht die Nutzung von gap */
     align-items: center;
@@ -141,12 +146,17 @@ body {
     justify-content: center;
     /* Zentriert den Inhalt horizontal */
     text-decoration: none;
-
-    margin-right: 50px;
+    text-align: center;
+    margin-top: 28px;
 }
 
-.portfolio-buttons {
-    margin-right: 100px;
+.text-buttons {
+    display: flex;
+    justify-content: flex-start;
+    /* Ausrichtung der Buttons am linken Rand */
+    gap: 10px;
+    /* Abstand zwischen den Buttons */
+    width: 100%;
 }
 
 .tools-description {
@@ -218,15 +228,6 @@ body {
     }
 }
 
-@media (max-width: 1400px) {
-    .portfolio-button {
-        width: 80px;
-        padding: 0;
-        
-    }
-}
-
-
 @media (max-width: 1200px) {
     .portfolio-header {
         padding-left: 400px;
@@ -259,11 +260,19 @@ body {
 
     .portfolio-text {
         width: 100%;
+        text-align: center;
     }
 
     .portfolio-text-2 {
         width: 100%;
         padding-bottom: 50px;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .project-tools {
+        text-align: center;
     }
 
     .reverse {
