--- a/src/app/main-content/skills/skills.component.scss
+++ b/src/app/main-content/skills/skills.component.scss
@@ -74,6 +74,7 @@
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
   font-weight: 400;
+  text-align: center;
 }
 
 .skills-section-right {
@@ -248,6 +249,10 @@
 
 @media (max-width: 400px) {
 
+  .skills-section {
+    justify-content: center;
+  }
+  
   h1 {
     font-size: 30px;
   }
