--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -187,8 +187,9 @@ html, body {
     flex-direction: column; /* Elemente untereinander anordnen */
     justify-content: center;
     margin-left: 0;
-    margin-top: 100px;
+    margin-top: 140px;
     background-image: none;
+    margin-bottom: 0;
   }
 
   .text-section {
@@ -214,6 +215,11 @@ html, body {
     padding-bottom: 40px;
     padding-top: 40px;
   }
+  
+  .image-section {
+    padding-top: 150px;
+  }
+
 }
 
 @media (max-width: 400px) {
@@ -225,13 +231,8 @@ html, body {
     font-size: 40px !important;
   }
 
-  .about-me-container {
-    height: auto;
-    
-  }
-
   .about-me {
-    padding-top: 130px;
+    padding-top: 60px;
   }
 
   .about-text {
@@ -251,7 +252,5 @@ html, body {
     height: 35px;
   }
 
-  .image-section {
-    padding-top: 150px;
-  }
+ 
 }
