--- a/src/app/main-content/header/header.component.scss
+++ b/src/app/main-content/header/header.component.scss
@@ -28,11 +28,12 @@ h1 {
   
   /* Popup-Menü */
   .popup-menu {
+    height: 100vh; /* Volle Bildschirmhoehe */
     position: fixed; /* Position relativ zum übergeordneten Element */
     top: 109px; /* Direkt unter dem Header */
     right: 0; /* Am rechten Rand des Bildschirms */
-    width: 200px; /* Breite des Popup-Menüs */
-    background-color: #141D2F; /* Hintergrundfarbe */
+    width: 100%; /* Breite des Popup-Menüs */
+    background-color: rgb(20, 29, 47, 0.5); /* Hintergrundfarbe */
     padding: 20px; /* Innenabstand */
     z-index: 9999; /* Höherer z-index, damit es über anderen Elementen liegt */
     transition: opacity 0.3s ease; /* Weicher Übergang für das Einblenden */
@@ -43,15 +44,26 @@ h1 {
     opacity: 1; /* Volle Sichtbarkeit */
     pointer-events: auto; /* Klicks aktivieren */
   }
+
+  .popup-menu-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    justify-content: start;
+  }
   
   
   /* Links im Popup-Menü */
   .popup-menu-content a {
     color: white;
     text-decoration: none;
-    display: block; /* Links in Blöcke, damit sie untereinander stehen */
-    margin-bottom: 10px; /* Abstand zwischen den Links */
     z-index: 9999; /* Höherer z-index, damit es über anderen Elementen liegt */
+    padding: 30px;
+    font-size: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 400;
+    transition: color 0.3s ease;
   }
   
   .popup-menu-content a:hover {
