--- a/src/app/impressum/impressum.component.html
+++ b/src/app/impressum/impressum.component.html
@@ -1,3 +1,8 @@
+<div class="header">
+    <h1>Stavros Nastos</h1>
+    <button class="impressum-button" [routerLink]="['']">Zurück zur Startseite</button>
+  </div>
+
 <div class="impressum">
     <h1>Impressum</h1>
   
@@ -12,6 +17,6 @@
     <p>Quelle: <a href="https://www.e-recht24.de">e-recht24.de</a></p>
   
     <!-- Button to go back to the main page -->
-    <button class="impressum-button" [routerLink]="['']">Zurück zur Startseite</button>
+   
   </div>
   
