--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -1,16 +1,21 @@
 html, body {
   margin: 0;
+  background-color: #141D2F;
 }
 
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #1e2a38;
+  
+  background-position: right;
+  background-repeat: no-repeat;
+  background-size: 600px;
 }
 
 .about-me {
   padding: 20px;
-  background-color: #1e2a38;
   color: white;
   display: flex;
   flex-direction: column;
@@ -72,10 +77,6 @@ html, body {
   margin-top: 60px;
   margin-bottom: 100px;
   margin-left: 100px;
-  background-image: url('../../../assets/backgrounds/purple1.png');
-  background-position: right top;
-  background-repeat: no-repeat;
-  background-size: contain;
 }
 
 .text-section {
@@ -139,13 +140,17 @@ html, body {
   justify-content: center;
   padding-right: 200px;
   margin-top: 85px;
+  background-image: url('../../../assets/backgrounds/purple1.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 380px;
 }
 
 .simple-profile-image {
   width: 130%; /* Passe die Breite an */
   height: 110%; /* Proportionale Höhe */
   border: none; /* Entfernt alle Ränder */
-  border-radius: 100px;
+  border-radius: 40px;
   object-fit: cover; /* Bild an den Container anpassen */
 }
 
