--- a/src/app/main-content/header/header.component.html
+++ b/src/app/main-content/header/header.component.html
@@ -1,20 +1,23 @@
-<div class="header">
-  <h1>Stavros Nastos</h1>
-  <div class="header-menu">
-    <a (click)="scrollToSection('about-me')">About me</a>
-    <a (click)="scrollToSection('skills')">Skills</a>
-    <a (click)="scrollToSection('portfolio')">Portfolio</a>
+<div class="header-container">
+  <div class="header">
+    <h1>Stavros Nastos</h1>
+    <div class="header-menu">
+      <a (click)="scrollToSection('about-me')">About me</a>
+      <a (click)="scrollToSection('skills')">Skills</a>
+      <a (click)="scrollToSection('portfolio')">Portfolio</a>
+    </div>
+    <!-- Button für das Menü bei kleineren Bildschirmen -->
+    <button class="menu-toggle" (click)="toggleMenu()">☰</button>
   </div>
-  <!-- Button für das Menü bei kleineren Bildschirmen -->
-  <button class="menu-toggle" (click)="toggleMenu()">☰</button>
-</div>
 
-<!-- Popup-Menü mit Angular-Bindung zur Anzeige/Versteckung -->
-<div id="popup-menu"  class="popup-menu" [ngStyle]="{'display': isMenuVisible ? 'block' : 'none'}">
-  <div class="popup-menu-content">
-    <a (click)="scrollToSection('about-me'); toggleMenu()">About me</a>
-    <a (click)="scrollToSection('skills'); toggleMenu()">Skills</a>
-    <a (click)="scrollToSection('portfolio'); toggleMenu()">Portfolio</a>
-    <button class="close-menu" (click)="toggleMenu()">Close</button>
+
+  <!-- Popup-Menü mit Angular-Bindung zur Anzeige/Versteckung -->
+  <div id="popup-menu" class="popup-menu" [ngStyle]="{'display': isMenuVisible ? 'block' : 'none'}">
+    <div class="popup-menu-content">
+      <a (click)="scrollToSection('about-me'); toggleMenu()">About me</a>
+      <a (click)="scrollToSection('skills'); toggleMenu()">Skills</a>
+      <a (click)="scrollToSection('portfolio'); toggleMenu()">Portfolio</a>
+      <button class="close-menu" (click)="toggleMenu()">Close</button>
+    </div>
   </div>
 </div>
