--- a/src/app/privacy/privacy.component.scss
+++ b/src/app/privacy/privacy.component.scss
@@ -1,18 +1,19 @@
 .privacy {
+
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: auto;
     background-color: #141D2F;
-    padding: 20px;
     color: white;
     font-family: 'Poppins', sans-serif;
-    padding: 100px;
+    padding: 140px;
+    text-align: start;
+
 }
 
 .back-button {
-    position: fixed;
     top: 20px;
     left: 20px;
     background-color: #70E61C;
@@ -25,10 +26,30 @@
     transition: background-color 0.3s ease;
     z-index: 1000; /* Make sure the button stays on top */
     margin-left: 100px;
-    margin-top: 100px;
   }
   
   .back-button:hover {
     background-color: #9747FF;
+  }
+
+  h1 {
+    color: white;
+    font-size: 32px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 700;
+  }
+  
+  /* Header-Styling */
+  .header {
+    position: fixed; /* Fixiert den Header am oberen Bildschirmrand */
+    top: 0;
+    left: 0;
+    width: 100vw; /* Volle Breite */
+    background-color: #141D2F; /* Hintergrundfarbe */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 109.03px; /* Höhe des Headers */
+    z-index: 1000; /* Stellt sicher, dass der Header über anderen Inhalten liegt */
   }
   
